<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="118dp" >

        <TableRow>
            <!-- Row 1 -->
            <Button
                android:id="@+id/p1_add_1_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:minHeight="48dip"
                android:text="@string/add_1_health"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/p1_add_5_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dip"
                android:text="@string/add_5_health"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/p2_add_1_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_1_health"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/p2_add_5_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/add_5_health"
                android:textColor="@color/white" />
        </TableRow>
        <TableRow>
            <!-- Row 2 -->
            <Button
                android:id="@+id/p1_minus_1_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/add_5_health"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/p1_minus_5_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dip"
                android:text="@string/minus_5_health"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/p2_minus_1_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_1_health"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/p2_minus_5_health"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/minus_5_health"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/p1HealthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="55dp"    
        android:text="@string/p1HealthText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/p2HealthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p1HealthText"
        android:layout_alignBottom="@+id/p1HealthText"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_marginRight="36dp"
        android:text="@string/p2HealthText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:onClick="aboutPage"
        android:text="@string/about" />

</RelativeLayout>
